add middleware, update unit test and update generate and verify token
